--- a/carte.html
+++ b/carte.html
@@ -11,7 +11,7 @@
     <h1>Créer votre Carte Otaku</h1>
     <form id="otakuForm">
       <input type="text" id="username" placeholder="Votre nom ou pseudo" required>
-      <input type="text" id="animeFav" placeholder="Votre anime préféré" required>
+      <input type="text" id="animeFav" placeholder="Votre animé préféré" required>
       <input type="text" id="specialSkill" placeholder="Votre compétence spéciale" required>
       <button type="button" id="generateButton">Générer ma carte</button>
     </form>
